<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/index_title_tb"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#3232CD"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <TextView
                android:id="@+id/index_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/oj4th_in_hand"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:fontFamily="casual"
                />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/index_title_divider"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="55dp"
            android:layout_below="@id/index_title_tb" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:fontFamily="casual"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_height="90dp"
            android:textAlignment="center"
            android:text="@string/problems"
            android:gravity="center"
            android:layout_marginTop="120dp"
            android:onClick="watchProblem"
            />
        <View
            android:id="@id/index_title_divider"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp"
            android:layout_marginTop="177dp"
            android:background="#000000"
            android:layout_below="@id/index_title_tb" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textSize="30sp"
            android:fontFamily="casual"
            android:textColor="#000000"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/tutorial"
            android:layout_marginTop="240dp"
            android:onClick="watchTutorial"
            />
        <View
            android:id="@id/index_title_divider"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp"
            android:layout_marginTop="297dp"
            android:background="#000000"
            android:layout_below="@id/index_title_tb" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:text="@string/community"
            android:textColor="#000000"
            android:textSize="30sp"
            android:gravity="center"
            android:onClick="watchCommunity"
            android:layout_marginTop="360dp"
            />
        <View
            android:id="@id/index_title_divider"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp"
            android:layout_marginTop="417dp"
            android:background="#000000"
            android:layout_below="@id/index_title_tb" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="90dp"
            android:text="@string/account"
            android:fontFamily="casual"
            android:onClick="watchAccount"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="480dp"
            android:textSize="30sp"
            />
        <View
            android:id="@id/index_title_divider"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp"
            android:layout_marginTop="537dp"
            android:background="#000000"
            android:layout_below="@id/index_title_tb" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>